--- a/src/less/base/mixins.less
+++ b/src/less/base/mixins.less
@@ -30,3 +30,9 @@
     -webkit-text-size-adjust: @value;
 }
 
+.white-space(@value) {
+    white-space: @value;
+    white-space: ~"-moz-"@value;
+    white-space: ~"-"@value;
+    white-space: ~"-o-"@value;
+}
