--- a/src/less/website/codetabs.less
+++ b/src/less/website/codetabs.less
@@ -12,6 +12,10 @@
                 cursor: default;
                 opacity: 1;
             }
+
+            &.hidden {
+                display: none;
+            }
         }
     }
 
