--- a/src/less/website/search.less
+++ b/src/less/website/search.less
@@ -30,6 +30,8 @@
     opacity: 1;
 
     .search-results {
+        padding: 20px 30px 0;
+
         .search-results-title {
             text-transform: uppercase;
             text-align: center;
