--- a/src/less/website/variables.less
+++ b/src/less/website/variables.less
@@ -1,8 +1,9 @@
-// Sizes of page content
-@api-method-padding: 15px;
 
-// Colors
-@api-soft-grey: #E5E5E5;
+// API methods
+@api-method-padding:                30px;
+
+@api-soft-grey:                     #F1EFEF;
+@api-code-background:               #FEFEFE;
 
 // Borders
 @api-method-border: 1px solid @api-soft-grey;
@@ -20,9 +21,9 @@
 @mobileMaxWidth:                      1240px;
 
 // Header
-@header-height:                       50px;
+@header-height:                       51px;
 @header-color:                        hsl(194, 5%, 52%);
-@header-background:                   transparent;
+@header-background:                   #FFF;
 @header-border:                       rgba(0, 0, 0, 0.07);
 @header-button-color:                 #ccc;
 @header-button-hover-color:           #444;
