--- a/src/less/website/api-method.less
+++ b/src/less/website/api-method.less
@@ -1,6 +1,10 @@
 .api-method {
     margin: @api-method-padding -@api-method-padding;
 
+    &:last-of-type {
+        margin-bottom: 0;
+    }
+
     .api-method-definition {
         padding: 0 @api-method-padding @api-method-padding/2;
     }
