Remove duplicate _layouts from theme-default

--- a/_layouts/website/page.html
+++ b/_layouts/website/page.html
@@ -1,62 +1,4 @@
-{% extends "./layout.html" %}
+{% extends template.self %}
 
-{% block title %}{{ page.title }} · {{ super() }}{% endblock %}
-
-{% block description %}{{ page.description }}{% endblock %}
-
-{% block javascript %}
-    <script src="{{ "gitbook.js"|resolveAsset }}"></script>
-    <script src="{{ "theme.js"|resolveAsset }}"></script>
-    {% for resource in plugins.resources.js %}
-        {% if resource.url %}
-        <script src="{{ resource.url }}"></script>
-        {% else %}
-        <script src="{{ resource.path|resolveAsset }}"></script>
-        {% endif %}
-    {% endfor %}
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-{% endblock %}
-
-{% block body %}
-<div class="book">
-    <div class="book-summary">
-        {% block book_sidebar %}
-            {% block search_input %}{% endblock %}
-            {% block book_summary %}
-                <nav role="navigation">
-                {% include "website/summary.html" %}
-                </nav>
-            {% endblock %}
-        {% endblock %}
-    </div>
-
-    <div class="book-body">
-        {% block book_body %}
-            <div class="body-inner">
-                {% block book_inner %}
-                    {% include "website/header.html" %}
-
-                    <div class="page-wrapper" tabindex="-1" role="main">
-                        <div class="page-inner">
-                            {% block search_results %}
-                                <section class="normal markdown-section">
-                                {% block page %}
-                                {{ page.content|safe }}
-                                {% endblock %}
-                                </section>
-                            {% endblock %}
-                        </div>
-                    </div>
-                {% endblock %}
-            </div>
-        {% endblock %}
-    </div>
-
-    <script>
-        var gitbook = gitbook || [];
-        gitbook.push(function() {
-            gitbook.page.hasChanged({{ template.getJSContext()|dump|safe }});
-        });
-    </script>
-</div>
+{% block book_navigation %}
 {% endblock %}
