Add padding variable for markdown-section

--- a/src/less/website.less
+++ b/src/less/website.less
@@ -54,7 +54,7 @@ body {
 }
 
 .markdown-section {
-    padding: 20px @api-method-padding 0;
+    padding: @markdown-section-padding @api-method-padding 0;
 }
 
 
