--- a/src/less/website/variables.less
+++ b/src/less/website/variables.less
@@ -8,6 +8,8 @@
 @api-code-background:                   @color-gray-lightest;
 @api-method-border:                     1px solid @api-soft-grey;
 
+@markdown-section-padding:              20px;
+
 // Global
 @staticPath: ".";
 
