--- a/src/less/website/api-method.less
+++ b/src/less/website/api-method.less
@@ -1,5 +1,5 @@
 .api-method {
-    margin: @api-method-padding/2 -@api-method-padding;
+    margin: @api-method-padding -@api-method-padding;
 
     &:last-of-type {
         margin-bottom: 0;
@@ -58,7 +58,6 @@
                 position: relative;
                 float: left;
                 width: 50%;
-                margin: @api-method-padding/2 auto 0;
                 padding: @api-method-padding @api-method-padding @api-method-padding/2;
                 border-left: @api-method-border;
                 border-top: none;
