--- a/src/less/website.less
+++ b/src/less/website.less
@@ -1,51 +1,12 @@
-@import "base/all.less";
-@import "../../node_modules/font-awesome/less/font-awesome.less";
 @import "../../node_modules/preboot/less/preboot.less";
 
+@import "website/mixins.less";
 @import "website/variables.less";
-@import "website/codetabs.less";
-@import "website/languages.less";
-@import "website/header.less";
-@import "website/dropdown.less";
-@import "website/summary.less";
-@import "website/body.less";
-@import "website/page.less";
-@import "website/buttons.less";
-@import "website/markup.less";
-@import "website/navigation.less";
-@import "website/search.less";
-@import "website/langswitcher.less";
 @import "website/api-method.less";
-
-* {
-    .box-sizing(border-box);
-    -webkit-overflow-scrolling: touch;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-text-size-adjust: none;
-    -webkit-touch-callout: none;
-    -webkit-font-smoothing: antialiased;
-}
-
-a {
-    text-decoration: none;
-}
-
-html, body {
-    height: 100%;
-}
-
-html {
-    font-size: 62.5%;
-}
-
-body {
-    text-rendering: optimizeLegibility;
-    font-smoothing: antialiased;
-    font-family: @font-family-base;
-    font-size: @font-size-base;
-    letter-spacing: .2px;
-    .text-adjust(100%);
-}
+@import "website/header.less";
+@import "website/langswitcher.less";
+@import "website/search.less";
+@import "website/summary.less";
 
 .page-inner {
     max-width: 100%;
