--- a/src/less/website/langswitcher.less
+++ b/src/less/website/langswitcher.less
@@ -1,11 +1,11 @@
 .book-header .btn.lang-switcher {
-    color: @button-hover-color;
+    /*color: @button-hover-color;*/
     text-transform: none;
     font-weight: 500;
     border-radius: 0;
 
     &.active {
-        background-color: #03677D;
-        color: #FFF;
+        background-color: @lang-switcher-active-bg-color;
+        color: @lang-switcher-active-color;
     }
 }
