Add style for comments

--- a/src/less/website.less
+++ b/src/less/website.less
@@ -6,6 +6,7 @@
 @import "website/header.less";
 @import "website/langswitcher.less";
 @import "website/search.less";
+@import "website/comments.less";
 
 .page-inner {
     max-width: 100%;
