Add CSS to display header on mobile

--- a/src/less/website/variables.less
+++ b/src/less/website/variables.less
@@ -22,3 +22,4 @@
 // Sidebar
 @sidebar-transition-duration:           250ms;
 @sidebar-width:                         300px;
+@sidebar-breakpoint:                    600px;
