--- a/src/less/website/header.less
+++ b/src/less/website/header.less
@@ -15,6 +15,10 @@
     &.with-summary {
         .book-header {
             left: @sidebar-width;
+
+            @media (max-width: @sidebar-breakpoint) {
+                left: 0;
+            }
         }
     }
 }
