Update page style for display

--- a/src/less/website.less
+++ b/src/less/website.less
@@ -9,10 +9,14 @@
 @import "website/comments.less";
 @import "themes/themes.less";
 
-.page-inner {
+.PageContainer {
     max-width: 100%;
     padding: 0;
-    margin-top: @header-height;
+}
+
+.Page {
+    padding-left: @api-method-padding + 10;
+    padding-right: @api-method-padding + 10;
 }
 
 .markdown-section {
