Add base display for LanguagesButtons component

--- a/src/less/website/langswitcher.less
+++ b/src/less/website/langswitcher.less
@@ -1,10 +1,9 @@
-.book-header .btn.lang-switcher {
-    /*color: @button-hover-color;*/
+.ThemeApi-LanguageButton {
     text-transform: none;
     font-weight: 500;
     border-radius: 0;
 
-    &.active {
+    &.ThemeApi-ActiveButton {
         background-color: @lang-switcher-active-bg-color;
         color: @lang-switcher-active-color;
     }
