Update LESS files

--- a/src/less/website.less
+++ b/src/less/website.less
@@ -2,9 +2,9 @@
 
 @import "website/mixins.less";
 @import "website/variables.less";
-@import "website/api-method.less";
+@import "website/ApiMethod.less";
 @import "website/header.less";
-@import "website/langswitcher.less";
+@import "website/LanguageButton.less";
 @import "website/search.less";
 @import "website/comments.less";
 @import "themes/themes.less";
@@ -17,8 +17,4 @@
 .Page {
     padding-left: @api-method-padding + 10;
     padding-right: @api-method-padding + 10;
-}
-
-.markdown-section {
-    padding: @markdown-section-padding @api-method-padding 0;
 }
