--- a/src/less/website/variables.less
+++ b/src/less/website/variables.less
@@ -7,9 +7,9 @@
 @api-code-background:                   @color-gray-lightest;
 @api-method-border:                     1px solid @api-soft-grey;
 
-// Language switchers
-@lang-switcher-active-bg-color:         #03677D;
-@lang-switcher-active-color:            #FFF;
+// Language buttons
+@language-button-active-bg-color:       #03677D;
+@language-button-active-color:          #FFF;
 
 // Page
 @markdown-section-padding:              20px;
