Add styling for sticky toolbar

--- a/src/less/website.less
+++ b/src/less/website.less
@@ -3,6 +3,7 @@
 @import "website/mixins.less";
 @import "website/variables.less";
 @import "website/ApiMethod.less";
+@import "website/Toolbar.less";
 @import "website/header.less";
 @import "website/LanguageButton.less";
 @import "website/search.less";
